# viewgl

./: .gitignore  CMakeLists.txt  README.md  compile_flags.txt  imgui.ini
.zed/: settings.json
assets/shaders/gls100/: depth.frag  depth.vert  skybox.frag  skybox.vert
assets/shaders/gls330/: depth.frag  depth.vert
assets/shaders/gls330/base/: depth.vert
assets/shaders/gls330/refract/: depth.frag
cmake/modules/: FindASSIMP.cmake
glad/include/glad/: glad.h
glad_org/old/src/: glad.c
include/: CMakeLists.txt  camera.hpp  input_options.hpp  lights.hpp  mesh.hpp  model.hpp  options.hpp  root_directory.h  shader.hpp  texture.hpp  win.hpp
lib/: CMakeLists.txt
run/: CMakeLists.txt  app.cpp  app.hpp  draw.cpp  draw.hpp  drawgui.cpp  drawgui.hpp  main.cpp
src/: CMakeLists.txt  camera.cpp  input_options.cpp  lights.cpp  mesh.cpp  model.cpp  options.cpp  shader.cpp  texture.cpp  win.cpp
tools/: buildw
viewgl/: CMakeLists.txt  drawgui.cpp  drawgui.hpp  imgui.ini  main.cpp
viewgl/web/: minshell.html  shell_minimal.html
